need to install word cloud

--- a/Emmanuel_Okoro.ipynb
+++ b/Emmanuel_Okoro.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 65,
    "id": "475dbe93",
    "metadata": {
     "ExecuteTime": {
@@ -94,7 +94,19 @@
      "start_time": "2021-06-23T10:30:50.215449Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'wordcloud'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-65-fc2ae6b6afe5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     37\u001b[0m \u001b[1;31m# Setting global constants to ensure notebook results are reproducible\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mwordcloud\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mWordCloud\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSTOPWORDS\u001b[0m \u001b[1;33m,\u001b[0m \u001b[0mImageColorGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[0mRANDOM_STATE\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m42\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'wordcloud'"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "import string\n",
@@ -133,6 +145,8 @@
     "# from comet_ml import Experiment\n",
     "\n",
     "# Setting global constants to ensure notebook results are reproducible\n",
+    "\n",
+    "from wordcloud import WordCloud, STOPWORDS , ImageColorGenerator\n",
     "\n",
     "RANDOM_STATE = 42\n",
     "\n",
@@ -574,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3206b598",
+   "id": "fc6d70ed",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7d7cb1b1",
+   "id": "cadd6f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "5af9135f",
+   "id": "726f462d",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "5ba2f041",
+   "id": "d08b6829",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "1e8011fb",
+   "id": "27392b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +845,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c91abaa6",
+   "id": "0d4fac05",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "44fec4f1",
+   "id": "acd97449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "530dabfb",
+   "id": "f516be28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +899,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f95c59da",
+   "id": "8972b27f",
    "metadata": {},
    "outputs": [
     {
@@ -911,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "91d67b88",
+   "id": "428207c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "eb3e372f",
+   "id": "fafaab45",
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "65abcb0d",
+   "id": "4aaf5b9b",
    "metadata": {},
    "outputs": [
     {
