--- a/Emmanuel_Okoro.ipynb
+++ b/Emmanuel_Okoro.ipynb
@@ -1115,7 +1115,7 @@
    "id": "02ab1ea8",
    "metadata": {},
    "source": [
-    "#### Remove web-url \n",
+    "### Remove web-url \n",
     "\n",
     "We write a function called *delete_url*. This function uses regex to identify web-url in a column and remove same from the column."
    ]
@@ -1247,7 +1247,7 @@
    "id": "4b8bcb14",
    "metadata": {},
    "source": [
-    "#### Convert words to lower case\n",
+    "### Convert words to lower case\n",
     "\n",
     "We write a function called *delete_url*. This function uses regex to identify web-url in a column and remove same from the column."
    ]
@@ -1705,7 +1705,7 @@
    "id": "a4510e4f",
    "metadata": {},
    "source": [
-    "### Remove stop words and words less than three letters\n",
+    "### Remove stop words \n",
     "Stop words are words which do not contain important significance to be used in Search Queries. \n",
     "We write a function *remove_stop_word*, that removes stop words in a speified column."
    ]
@@ -1724,7 +1724,6 @@
     "    \"\"\"\n",
     "    def operation(toks):\n",
     "        new_toks = [tok for tok in toks if tok not in stopwords.words('english')]\n",
-    "        new_toks = [tok for tok in new_toks if len(tok) > 2]\n",
     "        return new_toks\n",
     "    \n",
     "    df = data.copy()\n",
@@ -3874,7 +3873,7 @@
    "metadata": {},
    "source": [
     "### Make predictions with the models generated above for kaggle submission :\n",
-    "- **logreg_model** (Logistics Regression model)\n",
+    "- **logreg_model** (Naive Baye Regression model)\n",
     "- **randomF_model** (RandomForestClasifier model)\n",
     "- **svc_model** (SVC model)\n"
    ]
@@ -3963,7 +3962,7 @@
     "### Convert the predictions of the models to dataframes\n",
     "\n",
     "We have generated predictions for three different models above:\n",
-    "- **y_pred_logistic** (Logistics Regression model)\n",
+    "- **y_pred_logistic** (Naive Bayes Regression model)\n",
     "- **y_pred_random** (RandomForestClasifier model)\n",
     "- **y_pred_svc** (SVC model)"
    ]
@@ -3973,7 +3972,7 @@
    "id": "aaf0539b",
    "metadata": {},
    "source": [
-    "#### Logistics Regression"
+    "#### Naive Baye Regression"
    ]
   },
   {
