--- a/Emmanuel_Okoro.ipynb
+++ b/Emmanuel_Okoro.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "id": "475dbe93",
    "metadata": {
     "ExecuteTime": {
@@ -126,13 +126,16 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import recall_score\n",
+    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import f1_score\n",
     "\n",
     "\n",
     "from wordcloud import WordCloud, STOPWORDS , ImageColorGenerator\n",
     "\n",
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Dense\n",
-    "from tensorflow.keras.models import Sequential\n",
+    "# import tensorflow as tf\n",
+    "# from tensorflow.keras.layers import Dense\n",
+    "# from tensorflow.keras.models import Sequential\n",
     "\n",
     "RANDOM_STATE = 42\n",
     "\n",
@@ -147,7 +150,7 @@
    "metadata": {},
    "source": [
     "<a id=\"two\"></a>\n",
-    "## 2. Loading the Data\n",
+    "## 2. Commit Initialization and Loading the Data\n",
     "<a class=\"anchor\" id=\"1.1\"></a>\n",
     "<a href=#cont>Back to Table of Contents</a>\n",
     "\n",
@@ -158,6 +161,62 @@
     "| In this section you are required to load the data from the `df_train` file into a DataFrame. |\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2db4ab0e",
+   "metadata": {},
+   "source": [
+    "### Commit init"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "fcfcd9dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "COMET WARNING: Comet has disabled auto-logging functionality as it has been imported after the following ML modules: tensorboard, sklearn, keras, tensorflow. Metrics and hyperparameters can still be logged using comet_ml.log_metrics() and comet_ml.log_parameters()\n",
+      "COMET INFO: ---------------------------\n",
+      "COMET INFO: Comet.ml Experiment Summary\n",
+      "COMET INFO: ---------------------------\n",
+      "COMET INFO:   Data:\n",
+      "COMET INFO:     display_summary_level : 1\n",
+      "COMET INFO:     url                   : https://www.comet.ml/emmanuelokoro/language-classifier/a3f12a9236ea422bb96543a8e9061f59\n",
+      "COMET INFO:   Uploads:\n",
+      "COMET INFO:     conda-environment-definition : 1\n",
+      "COMET INFO:     conda-info                   : 1\n",
+      "COMET INFO:     conda-specification          : 1\n",
+      "COMET INFO:     environment details          : 1\n",
+      "COMET INFO:     filename                     : 1\n",
+      "COMET INFO:     git metadata                 : 1\n",
+      "COMET INFO:     git-patch (uncompressed)     : 1 (2.88 KB)\n",
+      "COMET INFO:     installed packages           : 1\n",
+      "COMET INFO:     notebook                     : 1\n",
+      "COMET INFO:     source_code                  : 1\n",
+      "COMET INFO: ---------------------------\n",
+      "COMET WARNING: Comet has disabled auto-logging functionality as it has been imported after the following ML modules: tensorboard, sklearn, keras, tensorflow. Metrics and hyperparameters can still be logged using comet_ml.log_metrics() and comet_ml.log_parameters()\n",
+      "COMET WARNING: As you are running in a Jupyter environment, you will need to call `experiment.end()` when finished to ensure all metrics and code are logged before exiting.\n",
+      "COMET INFO: Experiment is live on comet.ml https://www.comet.ml/emmanuelokoro/language-classifier/5a390d66c559443f85b0d4c316e895fd\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import comet_ml at the top of your file\n",
+    "from comet_ml import Experiment\n",
+    "\n",
+    "# Create an experiment with your api key\n",
+    "experiment = Experiment(\n",
+    "    api_key=\"emBEBYBp72gW5tfeZBSGftD0Y\",\n",
+    "    project_name=\"language-classifier\",\n",
+    "    workspace=\"emmanuelokoro\",\n",
+    ")"
    ]
   },
   {
@@ -2601,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "id": "873de8d5",
    "metadata": {},
    "outputs": [],
@@ -2614,7 +2673,7 @@
     "    model.fit(X_train, y_train)\n",
     "    y_pred = model.predict(X_test)\n",
     "    \n",
-    "    return (model, classification_report(y_test, y_pred))"
+    "    return (model, y_pred, classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -2629,45 +2688,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "20d073e0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "Classification Report:\n",
-      "\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "         afr       1.00      1.00      1.00       583\n",
-      "         eng       1.00      1.00      1.00       615\n",
-      "         nbl       0.99      1.00      1.00       583\n",
-      "         nso       1.00      1.00      1.00       625\n",
-      "         sot       1.00      1.00      1.00       618\n",
-      "         ssw       1.00      1.00      1.00       584\n",
-      "         tsn       1.00      1.00      1.00       598\n",
-      "         tso       1.00      1.00      1.00       561\n",
-      "         ven       1.00      1.00      1.00       634\n",
-      "         xho       1.00      1.00      1.00       609\n",
-      "         zul       1.00      1.00      1.00       590\n",
-      "\n",
-      "    accuracy                           1.00      6600\n",
-      "   macro avg       1.00      1.00      1.00      6600\n",
-      "weighted avg       1.00      1.00      1.00      6600\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # instantiate a logistic regression model\n",
     "logreg_model  = MultinomialNB()\n",
     "\n",
     "# Train, predict and evaluate model performance \n",
-    "(logreg_model, model_per) = model_eval(logreg_model)\n",
+    "(logreg_model, y_pred, model_per) = model_eval(logreg_model)\n",
     "\n",
     "# Print model classification report\n",
     "print(\"\\n\\nClassification Report:\\n\\n\",model_per)"
@@ -3873,7 +3903,7 @@
    "metadata": {},
    "source": [
     "### Make predictions with the models generated above for kaggle submission :\n",
-    "- **logreg_model** (Naive Baye Regression model)\n",
+    "- **logreg_model** (Naive Baye model)\n",
     "- **randomF_model** (RandomForestClasifier model)\n",
     "- **svc_model** (SVC model)\n"
    ]
@@ -3883,7 +3913,7 @@
    "id": "778c6521",
    "metadata": {},
    "source": [
-    "#### Logistic Regression Model"
+    "#### Naive Baye Model"
    ]
   },
   {
@@ -3962,7 +3992,7 @@
     "### Convert the predictions of the models to dataframes\n",
     "\n",
     "We have generated predictions for three different models above:\n",
-    "- **y_pred_logistic** (Naive Bayes Regression model)\n",
+    "- **y_pred_logistic** (Naive Bayes model)\n",
     "- **y_pred_random** (RandomForestClasifier model)\n",
     "- **y_pred_svc** (SVC model)"
    ]
@@ -3972,7 +4002,7 @@
    "id": "aaf0539b",
    "metadata": {},
    "source": [
-    "#### Naive Baye Regression"
+    "#### Naive Baye "
    ]
   },
   {
@@ -4305,16 +4335,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "id": "233b0e24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [6600, 5682]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/6k/h58d23tj54bch5pttmj5tjwm0000gn/T/ipykernel_25488/49766406.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Generate all metrics for model performance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mf1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf1_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_logistic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'weighted'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprecision\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprecision_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_logistic\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;34m'weighted'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mrecall\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrecall_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_logistic\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0maverage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'weighted'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_logistic\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mf1_score\u001b[0;34m(y_true, y_pred, labels, pos_label, average, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1121\u001b[0m     \u001b[0mmodified\u001b[0m \u001b[0;32mwith\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mzero_division\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1122\u001b[0m     \"\"\"\n\u001b[0;32m-> 1123\u001b[0;31m     return fbeta_score(\n\u001b[0m\u001b[1;32m   1124\u001b[0m         \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1125\u001b[0m         \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mfbeta_score\u001b[0;34m(y_true, y_pred, beta, labels, pos_label, average, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1259\u001b[0m     \"\"\"\n\u001b[1;32m   1260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1261\u001b[0;31m     _, _, f, _ = precision_recall_fscore_support(\n\u001b[0m\u001b[1;32m   1262\u001b[0m         \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1263\u001b[0m         \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36mprecision_recall_fscore_support\u001b[0;34m(y_true, y_pred, beta, labels, pos_label, average, warn_for, sample_weight, zero_division)\u001b[0m\n\u001b[1;32m   1542\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mbeta\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1543\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"beta should be >=0 in the F-beta score\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1544\u001b[0;31m     \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_set_wise_labels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maverage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1545\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1546\u001b[0m     \u001b[0;31m# Calculate tp_sum, pred_sum, true_sum ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_set_wise_labels\u001b[0;34m(y_true, y_pred, average, labels, pos_label)\u001b[0m\n\u001b[1;32m   1346\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"average has to be one of \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maverage_options\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1347\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1348\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1349\u001b[0m     \u001b[0;31m# Convert to Python primitive type to avoid NumPy type / Python str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1350\u001b[0m     \u001b[0;31m# comparison. See https://github.com/numpy/numpy/issues/6784\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     82\u001b[0m     \u001b[0my_pred\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0marray\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindicator\u001b[0m \u001b[0mmatrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m     \"\"\"\n\u001b[0;32m---> 84\u001b[0;31m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m     \u001b[0mtype_true\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtype_of_target\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0mtype_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtype_of_target\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_consistent_length\u001b[0;34m(*arrays)\u001b[0m\n\u001b[1;32m    330\u001b[0m     \u001b[0muniques\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlengths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    331\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muniques\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 332\u001b[0;31m         raise ValueError(\n\u001b[0m\u001b[1;32m    333\u001b[0m             \u001b[0;34m\"Found input variables with inconsistent numbers of samples: %r\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    334\u001b[0m             \u001b[0;34m%\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlengths\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [6600, 5682]"
+     ]
+    }
+   ],
    "source": [
     "# Generate all metrics for model performance\n",
-    "# f1 = f1_score(y_true, y_pred_test, average = 'weighted')\n",
-    "# precision = precision_score(y_true, y_pred_test, average ='weighted')\n",
-    "# recall = recall_score(y_true, y_pred_test,average = 'weighted')\n",
-    "# accuracy = accuracy_score(y_true, y_pred_test)"
+    "f1 = f1_score(y_test, y_pred_logistic, average = 'weighted')\n",
+    "precision = precision_score(y_test, y_pred_logistic, average ='weighted')\n",
+    "recall = recall_score(y_test, y_pred_logistic,average = 'weighted')\n",
+    "accuracy = accuracy_score(y_test, y_pred_logistic,)"
    ]
   },
   {
@@ -4333,18 +4381,18 @@
    "outputs": [],
    "source": [
     "# Generates two dictionaries, parameters and metric values\n",
-    "# params = {\n",
-    "#     'random_state': RANDOM_STATE,\n",
-    "#     'model_type': 'Logistics Regression'\n",
-    "# }\n",
+    "params = {\n",
+    "    'random_state': RANDOM_STATE,\n",
+    "    'model_type': 'Logistics Regression'\n",
+    "}\n",
     "\n",
-    "# metrics ={\n",
-    "#     'Accuracy': accuracy,\n",
-    "#     'precision': precision,\n",
-    "#     'recall': recall,\n",
-    "#     'f1': f1,\n",
-    "# }\n",
-    "# metrics"
+    "metrics ={\n",
+    "    'Accuracy': accuracy,\n",
+    "    'precision': precision,\n",
+    "    'recall': recall,\n",
+    "    'f1': f1,\n",
+    "}\n",
+    "metrics"
    ]
   },
   {
@@ -4383,11 +4431,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Create a list of comet experiments for this project\n",
-    "# comet_experiments = [ experiment]\n",
+    "# Create a list of comet experiments for this project\n",
+    "comet_experiments = [ experiment]\n",
     "\n",
-    "# # Log the respective experiments parameter and metric values\n",
-    "# experiment_logger(comet_experiments)"
+    "# Log the respective experiments parameter and metric values\n",
+    "experiment_logger(comet_experiments)"
    ]
   },
   {
@@ -4425,8 +4473,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # End all experiments\n",
-    "# end_comet(comet_experiments)"
+    "# End all experiments\n",
+    "end_comet(comet_experiments)"
    ]
   },
   {
